sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:19: error: '(' expected but '{' found.
		{
                ^AlgBubbleSort3:24: error: illegal start of simple expression
	}
        ^